<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <!-- 商标 -->
<RelativeLayout
    android:id="@+id/rl_bran"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/aide"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rl_bran"
        android:padding="20dp"
        android:layout_marginTop="-20dp"
        >
        <TextView
            android:id="@+id/tv_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_name"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            />

        <EditText
            android:id="@+id/edt_login_name_value"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="19dp"
            android:layout_toRightOf="@id/tv_login_name"
            android:inputType="text"
            android:hint="@string/me_name_tip"
            android:maxLines="1" />
        <TextView
            android:id="@+id/tv_login_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_login_name"
            android:textSize="18dp"
            android:layout_marginLeft="15dp"
            android:layout_alignBottom="@id/tv_login_name"
            android:visibility="gone"
            />
        <RelativeLayout
            android:id="@+id/rl_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login_name"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:id="@+id/tv_login_ps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_pw"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/edt_login_ps_value"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_login_ps"
                android:inputType="text"
                android:hint="@string/me_pw_tip"
                android:maxLines="1"
                />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rl_login"
        android:background="@drawable/shape_button"
        android:textColor="@color/white"
        />



</RelativeLayout>