<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/white">

    <!-- 标题栏 -->
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aide"
        >
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"
            android:src="@drawable/set_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_title"
            android:layout_marginLeft="55dp"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:textColor="@color/white"
            />

    </RelativeLayout>



    <!-- 返回  打印  -->
    <RelativeLayout
        android:id="@+id/rl_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_scan"
        android:text="@string/search_back"
        android:textSize="16sp"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        />

        <Button
            android:id="@+id/btn_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_scan"
            android:text="@string/search_print"
            android:textSize="16sp"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:textColor="@color/white"

            />

    </RelativeLayout>


    <!-- 列表 显示查询信息 -->
    <ListView
        android:id="@+id/lv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title"
        android:layout_above="@id/rl_button"
        android:layout_margin="20dp"
        >
    </ListView>


</RelativeLayout>
