<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/search_info_shape_corner"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >
    <LinearLayout
        android:id="@+id/ll_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_class"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_ticket_name"
            android:textSize="18dp"
            />
        <TextView
            android:id="@+id/tv_ticket_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            />
    </LinearLayout>

    <LinearLayout
    android:id="@+id/ll_class"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@id/ll_time"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/search_class"
    android:textSize="18dp"
    />
    <TextView
    android:id="@+id/tv_ticket_class"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="18dp"
    />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/rl_title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_time"
            android:textSize="18dp"
            />
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            />
    </LinearLayout>


    <!--<TextView-->
        <!--android:id="@+id/tv_ticket_name"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="18dp"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--/>-->
    <!--<TextView-->
        <!--android:id="@+id/tv_ticket_class"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="18dp"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--/>-->
    <!--<TextView-->
        <!--android:id="@+id/tv_time"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="18dp"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--/>-->


</LinearLayout>