<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customAttr="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--暂时先隐藏控件搬到计时fragment-->
    <RelativeLayout
        android:id="@+id/rl_ic"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/rl_title"
        android:layout_margin="30dp"
        android:background="@drawable/shape_scan"
        android:visibility="gone"
        tools:ignore="NotSibling">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_buy"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/btn_ic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/shape_scan_gray"
                android:padding="15dp"
                android:text="IC卡讀取會員信息"
                android:textSize="14dp" />

            <Button
                android:id="@+id/btn_scan_card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/btn_ic"
                android:background="@drawable/shape_scan_gray"
                android:padding="5dp"
                android:text="二維碼掃描讀取會員信息"
                android:textSize="14dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="消費"
            android:textSize="16dp" />

    </RelativeLayout>

    <!-- 父布局 用于控制登录前后，功能控件的显示与隐藏 -->
    <RelativeLayout
        android:id="@+id/rl_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">
        <!-- 登录后，二维码扫描认证 -->
        <RelativeLayout
            android:id="@+id/rl_scan_check"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="90dp"
            android:background="@drawable/shape_scan">

            <Button
                android:id="@+id/btn_qrcode"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_toRightOf="@id/rl_iv_scan_check"
                android:background="@color/transparent"
                android:padding="15dp"
                android:text="@string/check_scan"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/rl_iv_scan_check"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/saomiao" />

        </RelativeLayout>

        <!-- 登录后，查询 -->
        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/rl_scan_check"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_scan">

            <ImageView
                android:id="@+id/rl_iv_scan_search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:src="@android:drawable/ic_menu_search" />

            <TextView
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/rl_iv_scan_search"
                android:background="@color/transparent"
                android:gravity="center"
                android:text="@string/check_search"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </RelativeLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_login_check"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/check_login"
        android:textSize="22dp"
        android:visibility="gone" />


</RelativeLayout>